tests/valid/definite/For_Valid_1.whiley
void System::main([string] args):
    [int] xs = [1,2,3]
    for st in xs:
        print str(st)
